--- a/app/components/AboutMe/AboutMe.module.css
+++ b/app/components/AboutMe/AboutMe.module.css
@@ -1,10 +1,10 @@
 .AboutMe{
-    height: auto;
     width: 100%;
     margin: 40px 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    height: auto;
 }
 
 .divImg{
@@ -54,6 +54,9 @@
 
  
 @media (max-width: 768px) {
+    .AboutMe{
+        height: auto;
+    }
 
     .imgDESKTOP{
         width: 95%;
