--- a/app/components/NavBar/NavBar.module.css
+++ b/app/components/NavBar/NavBar.module.css
@@ -54,7 +54,10 @@
     padding: 10px;
     padding-left: 20px;
     padding-right: 20px;
-    border-radius: 10px;
+}
+
+.divLinks ul li a:hover{
+  border-bottom:2.5px solid aqua;
 }
 
 
