--- a/app/components/NavBar/NavBar.module.css
+++ b/app/components/NavBar/NavBar.module.css
@@ -61,6 +61,17 @@
 }
 
 
+@media (min-width: 1508px) {
+
+  .infoNav{
+    flex-direction: column;
+    width: 900%;
+    height: auto;
+  }
+
+
+}
+
 
 @media (max-width: 768px) {
 
