--- a/app/components/Forms/cardsPresentation/cardsPresentation.module.css
+++ b/app/components/Forms/cardsPresentation/cardsPresentation.module.css
@@ -1,7 +1,7 @@
 .cards h1{
   
   border-bottom:3px solid aqua;
-  font-size: 2.2vw;
+  font-size: 2vw;
 
 }
 
@@ -35,15 +35,15 @@
   width: 90%;
 }
 .cards b{
-    margin-top: 1.2vw;
+    margin-top: 20px;
     border-bottom:2px solid aqua;
-    font-size: 24px;
+    font-size: 1.7vw;
     font-weight: 600;
   }
 
   .cards span{
     margin-top: 13px;
-    font-size: 1.1vwpx;
+    font-size: 1.2vw;
   }
 
 
