--- a/app/components/Forms/cardsPresentation/cardsPresentation.module.css
+++ b/app/components/Forms/cardsPresentation/cardsPresentation.module.css
@@ -32,7 +32,7 @@
   margin-top: 20px;
   text-align: center;
   font-size: 1.2vw;
-  width: 85%;
+  padding-left: 30px;
 }
 .cards b{
     margin-top: 20px;
