--- a/app/components/colaborations/colaborations.module.css
+++ b/app/components/colaborations/colaborations.module.css
@@ -16,7 +16,7 @@
 }
 
 .colaborations h3{
-   font-size: 30px;
+   font-size: 2.3vw;
    font-weight: 700;
    color: rgb(23, 22, 22);
    text-align: center;
