--- a/app/components/NavBar/NavBar.module.css
+++ b/app/components/NavBar/NavBar.module.css
@@ -64,10 +64,9 @@
 @media (min-width: 1508px) {
 
   .infoNav{
-    flex-direction: column;
-    width: 99%;
-    height: auto;
-    border: 1px solid black;
+    width: 95%;
+    display: flex;
+    flex-direction: row;
   }
 
 
