--- a/app/components/Proyectos/Proyectos.module.css
+++ b/app/components/Proyectos/Proyectos.module.css
@@ -19,7 +19,7 @@
 
 .Proyectos p{
     color: white;
-    font-size: 17px;
+    font-size: 1.3px;
     margin-top: 0vh;   
     text-align: center;
     width: 60%;
@@ -116,3 +116,87 @@
    color: black;
  }
 
+
+
+ @media (max-width: 786px) {
+
+    .Proyectos h3{
+        font-size: 22.5px;
+        font-weight: 700;
+        color: white;
+        margin-top: 6vh;
+        border-bottom: 2px solid aqua ;
+    
+    }
+
+    .BackGraundImg{
+        width: 97vw;
+        height: 75vw;
+        overflow: hidden;
+        margin: 20px;
+    }
+    
+    .Proyectos p{
+        color: white;
+        font-size: 14px;
+        margin-top: 0vh;   
+        text-align: center;
+        width: 60%;
+    }
+
+    .proyectosPresent{
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        text-align: center;
+        align-items: center;
+        margin-top: 3vh;
+        border-bottom: 1px solid rgb(211, 214, 214);
+        padding-bottom: 60px;
+    }
+
+    .InfoProyect{
+        width: 97vw;
+        height: auto;
+        overflow: hidden;
+        margin: 20px;
+        text-align: left;
+    }
+
+    .InfoProyect h4{
+
+        text-align: left;
+        font-size: 30px;
+        /* border-bottom: 3px solid rgb(72, 74, 74);; */
+        width: auto;
+        color: rgb(72, 74, 74);
+    
+    }
+
+    .InfoProyect p{
+
+        width: 90%;
+        text-align: left;
+        margin-top: -25px;
+        font-size: 14px;
+    
+    }
+
+    .InfoProyect button{
+        background-color: transparent;
+        border-radius: 3px;
+        border: 2px solid  rgb(72, 74, 74);;  
+       padding-left: 10px;
+       padding-right: 10px;
+       padding-top: 5px;
+       padding-bottom: 5px;
+       font-size: 20px;
+       cursor: pointer;
+       text-align: left;
+       margin-top: -10px;
+     }
+       
+    }
+      
