--- a/app/components/NavBar/NavBar.module.css
+++ b/app/components/NavBar/NavBar.module.css
@@ -4,7 +4,10 @@
     margin: 0;
     display: flex;
     flex-direction: row;
-
+    position: fixed;
+    background-color: white;
+    z-index: 10000;
+    box-shadow: 0 .2rem .5rem rgba(141, 137, 137, 0.15)!important;
   }
 
   .divTogle{
@@ -15,6 +18,20 @@
     width: 100%;
     display: flex;
     flex-direction: row;
+  }
+  .imgLogo{
+    height: 7vw;
+    width: auto;
+    margin-top: 0px;
+  }
+
+  .logoWsp{
+    height: 7vw;
+    width: auto;
+    margin-top: 0px;
+    position: absolute;
+    top: 80vh;
+    left: 90vw;
   }
 
 
@@ -98,6 +115,7 @@
     margin: 15px;
     margin-left: 10px;
     width: 30px;
+ 
   }
 
   .divTogle span{
@@ -125,13 +143,14 @@
 
   .divLinks{
     width: 100%;
-    min-height: 300px;
+    min-height: 40vh;
     align-items:normal;
-    margin-top: 20px;
+    margin-top: 0px;
     transform: translateX(-100%);
     transition: 1s;
     z-index: 1;
     background-color: white;
+    margin-top: -10px;
   }
 
   .Open{
@@ -153,7 +172,15 @@
     padding: 0;
   }
 
+  .imgLogo{
+   height: 16vh;
+  }
 
+  .logoWsp{
+    height: 16vh;
+
+    left: 78vw;
+  }
 }
 
 
