--- a/app/components/NavBar/NavBar.module.css
+++ b/app/components/NavBar/NavBar.module.css
@@ -4,10 +4,7 @@
     margin: 0;
     display: flex;
     flex-direction: row;
-    position: fixed;
     background-color: white;
-    z-index: 10000;
-    box-shadow: 0 .2rem .5rem rgba(141, 137, 137, 0.15)!important;
   }
 
   .divTogle{
@@ -29,9 +26,11 @@
     height: 7vw;
     width: auto;
     margin-top: 0px;
-    position: absolute;
+    position: fixed;
     top: 80vh;
     left: 90vw;
+    cursor: pointer;
+    z-index: 2000;
   }
 
 
@@ -74,7 +73,7 @@
 }
 
 .divLinks ul li a:hover{
-  border-bottom:2.5px solid aqua;
+  border-bottom:1.5px solid rgb(72, 90, 90);
 }
 
 
