--- a/app/components/Presentation/Presentation.module.css
+++ b/app/components/Presentation/Presentation.module.css
@@ -2,19 +2,27 @@
     width: 100%;
     height: auto;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
+    text-align: center;
+    justify-content: space-evenly;
 }
+.divPresentation div{
+   text-align: left;
+}
+
 
 .divPresentation h1{
     font-family: "eurostile", sans-serif;
     font-size: 3.9vw;
-    margin-top: 200px;
+    margin-top: 50px;
 }
 
 .divPresentation h1 span{
 
-    border-bottom: 3px solid aqua;
+    border-bottom: 1.5px solid rgb(188, 168, 154);
+    text-align: left;
+    align-items: left;
 
 }
 
@@ -31,11 +39,11 @@
 
 .imgPrincp{
     border-radius: 5%;
-    margin-top: 35px;
+    margin-top: 40px;
     filter: grayscale(0%); 
     transition: filter 0.3s; 
-    width: 20%;
-    height: auto;
+    width: auto;
+    height: 10%;
 }
 
 .imgPrincp:hover{
@@ -47,7 +55,7 @@
 @media (max-width: 768px) {
 
     .divPresentation h1{
-        margin-top: 170px;
+        margin-top: 80px;
         font-size: 34px;
     }
 
@@ -55,7 +63,7 @@
         margin-top: 0px;
         font-size: 14px;
         width: 75%;
-        text-align: center;
+        text-align: left;
     }
 
     .imgPrincp{
