--- a/app/components/Proyectos/Proyectos.module.css
+++ b/app/components/Proyectos/Proyectos.module.css
@@ -125,12 +125,12 @@
         font-weight: 700;
         color: white;
         margin-top: 6vh;
-        border-bottom: 2px solid aqua ;
+        border-bottom: 1.5px solid rgb(135, 198, 198) ;
     
     }
 
     .BackGraundImg{
-        width: 97vw;
+        width: 100vw;
         height: 75vw;
         overflow: hidden;
         margin: 20px;
@@ -158,7 +158,7 @@
     }
 
     .InfoProyect{
-        width: 97vw;
+        width: 90vw;
         height: auto;
         overflow: hidden;
         margin: 20px;
