--- a/app/components/Proyectos/Proyectos.module.css
+++ b/app/components/Proyectos/Proyectos.module.css
@@ -197,6 +197,14 @@
        text-align: left;
        margin-top: -10px;
      }
+     
+     .empresaImg{
+        width: 100%;
+        height: 100%;
+        transition: 0.5s;
+        object-fit: contain; 
+        }
+        
        
     }
       
