--- a/app/components/NavBar/NavBar.module.css
+++ b/app/components/NavBar/NavBar.module.css
@@ -4,7 +4,7 @@
     margin: 0;
     display: flex;
     flex-direction: row;
-    background-color: white;
+    background-color: #F5F5F5;
   }
 
   .divTogle{
@@ -17,9 +17,10 @@
     flex-direction: row;
   }
   .imgLogo{
-    height: 7vw;
+    height: 10vw;
     width: auto;
-    margin-top: 0px;
+    position: relative;
+    top: 10px;
   }
 
   .logoWsp{
@@ -62,6 +63,7 @@
   }
 
 
+
   .divLinks ul li a {
     text-decoration: none; 
     color: #393636; 
@@ -71,6 +73,8 @@
     padding-left: 20px;
     padding-right: 20px;
 }
+
+
 
 .divLinks ul li a:hover{
   border-bottom:1.5px solid rgb(72, 90, 90);
