--- a/app/components/footer/Footer.module.css
+++ b/app/components/footer/Footer.module.css
@@ -1,6 +1,6 @@
 .footer{
     width: 100%;
-    height: 22vh;
+    height: 30vh;
     background-color: black;
     display: flex;
     justify-content: center;
@@ -16,6 +16,7 @@
     font-size: 1vw;  
     position: relative;
     top: 5px;
+    margin-left: 3px;
 }
 
 
