--- a/app/components/Forms/cardsPresentation/cardsPresentation.module.css
+++ b/app/components/Forms/cardsPresentation/cardsPresentation.module.css
@@ -20,7 +20,7 @@
     height: auto;
     border: 1px solid rgb(191, 181, 181);
     border-radius: 30px;
-    background-color: rgb(255, 255, 255);
+    background-color: #f5f5f5;
     display: flex;
     align-items: center;
     padding-top: 30px;
