--- a/app/components/Presentation/Presentation.module.css
+++ b/app/components/Presentation/Presentation.module.css
@@ -42,6 +42,7 @@
     margin-left: 10vw;
     margin-top: 40px;
     filter: grayscale(0%); 
+    /* box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.1); */
     transition: filter 0.3s; 
     width: auto;
     min-height: 100%;
