--- a/app/components/Presentation/Presentation.module.css
+++ b/app/components/Presentation/Presentation.module.css
@@ -1,11 +1,13 @@
 .divPresentation{
-    width: 100%;
-    height: auto;
-    display: flex;
+    width: 90%;
+    height: 50vh;
+    /* display: flex;
     flex-direction: row;
-    align-items: center;
-    text-align: center;
-    justify-content: space-evenly;
+    align-items: center; */
+    text-align: left;
+    /* justify-content: start; */
+    padding-left: 40px;
+
 }
 .divPresentation div{
    text-align: left;
@@ -14,8 +16,8 @@
 
 .divPresentation h1{
     font-family: "eurostile", sans-serif;
-    font-size: 3.9vw;
-    margin-top: 50px;
+    font-size: 4.9vw;
+    margin-top: 60px;
 }
 
 .divPresentation h1 span{
@@ -27,39 +29,53 @@
 }
 
 
-
+@keyframes floating {
+    0% {
+      transform: translateY(0px);
+    }
+    50% {
+      transform: translateY(50px);
+    }
+    100% {
+      transform: translateY(0px);
+    }
+  }
+  
 
 
 .divPresentation p{
     font-family: "eurostile", sans-serif;
-    font-size: 1.6vw;
+    font-size: 2vw;
     line-height: 1.5;
     margin-top: -20px;
 }
 
+.DivImg{
+    display: flex;
+    justify-content: end;
+}
+
 .imgPrincp{
     border-radius: 5%;
-    margin-left: 10vw;
-    margin-top: 40px;
-  
-    filter: grayscale(50%);
-    /* box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.1); */
-    transition: filter 0.3s; 
-    width: 24vw;
+    
+    margin-top: -100px;
+    margin-right: 3vw;
     height: auto;
-    border: 1px solid rgb(159, 152, 152);
+    border-radius: 30%;
+
+    animation-name: floating;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
 }
 
-.imgPrincp:hover{
-    filter: grayscale(0%); 
-    cursor: pointer;
 
-}
 
 @media (max-width: 768px) {
 
     .divPresentation{
         flex-direction: column;
+        padding-left: 10px;
     }
 
     .divPresentation h1{
@@ -72,19 +88,19 @@
         font-size: 14px;
         width: 100%;
         
-        text-align: center;
+        /* text-align: center; */
     }
 
     .imgPrincp{
-        margin-top: 0px;
-        width: 200px;
+        margin-top: -50px;
+        width: 100px;
         height: auto;
         margin-left: 4vw;
         margin-right: 4vw;
     }
     
     .divPresentation div{
-        text-align: center;
+        /* text-align: center; */
         padding: 5vw;
      }
      
