--- a/app/components/Presentation/Presentation.module.css
+++ b/app/components/Presentation/Presentation.module.css
@@ -53,20 +53,58 @@
 .DivImg{
     display: flex;
     justify-content: end;
+    margin-top: 100px;
 }
 
 .imgPrincp{
     border-radius: 5%;
+    height: 9vw;
+    width: auto;
     
     margin-top: -100px;
-    margin-right: 3vw;
-    height: auto;
+    margin-right: 10px;
     border-radius: 30%;
 
     animation-name: floating;
     animation-duration: 3s;
     animation-iteration-count: infinite;
     animation-timing-function: ease-in-out;
+
+    filter: drop-shadow(10px 7px 10px rgb(243, 255, 78));
+}
+
+.imgPrincp2{
+    border-radius: 5%;
+    height: 9vw;
+    width: auto;
+    
+    margin-top: -100px;
+    margin-right: 10px;
+    border-radius: 30%;
+
+    animation-name: floating;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+
+    filter: drop-shadow(10px 7px 10px rgb(0, 0, 0));
+}
+
+.imgPrincp3{
+    border-radius: 5%;
+    height: 9vw;
+    width: auto;
+    
+    margin-top: -100px;
+    margin-right: 10px;
+    border-radius: 30%;
+
+    animation-name: floating;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+
+    filter: drop-shadow(10px 7px 10px rgb(12, 135, 166));
 }
 
 
@@ -86,18 +124,39 @@
     .divPresentation p{
         margin-top: 0px;
         font-size: 14px;
-        width: 100%;
+        width: 100%; 
         
         /* text-align: center; */
     }
 
     .imgPrincp{
-        margin-top: -50px;
-        width: 100px;
-        height: auto;
+        margin-top: -120px;
+        height: 15vw;
+        width: auto;
         margin-left: 4vw;
         margin-right: 4vw;
+        z-index: 300;
     }
+
+    .imgPrincp2{
+        margin-top: -120px;
+        height: 15vw;
+        width: auto;
+        margin-left: 4vw;
+        margin-right: 4vw;
+        z-index: 300;
+    }
+    
+
+    .imgPrincp3{
+        margin-top: -120px;
+        height: 15vw;
+        width: auto;
+        margin-left: 4vw;
+        margin-right: 12vw;
+        z-index: 300;
+    }
+    
     
     .divPresentation div{
         /* text-align: center; */
