--- a/app/components/footer/Footer.module.css
+++ b/app/components/footer/Footer.module.css
@@ -22,9 +22,19 @@
 
 @media (max-width: 768px) {
 
+    .footer{
+        width: 100%;
+        height: 30vh;
+        background-color: black;
+        display: flex;
+        justify-content: start;
+        align-items: center;
+    }
+
     .footer p{
         font-size: 13px;
         color: white;
+        margin-left: 20px;
      }
      
      .imgLogoFooter{
