--- a/app/components/NavBar/NavBar.module.css
+++ b/app/components/NavBar/NavBar.module.css
@@ -178,11 +178,11 @@
   }
 
   .CloseTogle{
-   margin-top: -30px;
+   margin-top: -35px;
   }
 
   .IMGTogle{
-    margin-top: -30px;
+    margin-top: -38px;
   }
 
 
@@ -207,6 +207,8 @@
   .imgLogo{
    height: 150px;
    margin-top: -20px;
+     position: relative;
+     right: 10px;
   }
 
   .logoWsp{
