--- a/app/components/AboutMe/AboutMe.module.css
+++ b/app/components/AboutMe/AboutMe.module.css
@@ -2,6 +2,7 @@
     width: 100%;
     margin: 40px 0;
     display: flex;
+    margin-top: 130px;
     flex-direction: column;
     justify-content: center;
     height: auto;
