--- a/app/components/Presentation/Presentation.module.css
+++ b/app/components/Presentation/Presentation.module.css
@@ -1,6 +1,6 @@
 .divPresentation{
     width: 90%;
-    height: 50vh;
+    height: 80vh;
     /* display: flex;
     flex-direction: row;
     align-items: center; */
@@ -16,8 +16,8 @@
 
 .divPresentation h1{
     font-family: "eurostile", sans-serif;
-    font-size: 4.9vw;
-    margin-top: 60px;
+    font-size: 6.5vw;
+    margin-top: 100px;
 }
 
 .divPresentation h1 span{
@@ -53,7 +53,7 @@
 .DivImg{
     display: flex;
     justify-content: end;
-    margin-top: 100px;
+    margin-top: 200px;
 }
 
 .imgPrincp{
@@ -70,7 +70,7 @@
     animation-iteration-count: infinite;
     animation-timing-function: ease-in-out;
 
-    filter: drop-shadow(10px 7px 10px rgb(243, 255, 78));
+    filter: drop-shadow(10px 7px 10px rgb(15, 65, 103));
 }
 
 .imgPrincp2{
@@ -108,6 +108,25 @@
 }
 
 
+.Contentdivision{
+    width: 94vw;
+    text-align: center;
+    height: 20px;
+    margin-top:120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 100px;
+    
+  }
+
+  .Contentdivision div{
+    width: 40%;
+    height: 0px;
+    border: 1px solid rgb(197, 191, 191);
+    border-radius: 3px;
+  
+}
 
 
   
