cambios en la ux/ui 2

--- a/app/components/Presentation/Presentation.module.css
+++ b/app/components/Presentation/Presentation.module.css
@@ -158,6 +158,10 @@
         
     }
 
+    .Contentdivision{
+        display: none;
+    }
+
     .imgPrincp{
         margin-top: -120px;
         height: 100px;
