--- a/app/components/AboutMe/AboutMe.module.css
+++ b/app/components/AboutMe/AboutMe.module.css
@@ -1,7 +1,7 @@
 .AboutMe{
     width: 100%;
     margin: 40px 0;
-    display: flex;
+    display: flex;  
     margin-top: 130px;
     flex-direction: column;
     justify-content: center;
@@ -58,8 +58,10 @@
 @media (max-width: 768px) {
     .AboutMe{
         height: auto;
+        margin-top: 0px;
     }
 
+    
     .imgDESKTOP{
         width: 95%;
         height: auto;
