--- a/app/components/NavBar/NavBar.module.css
+++ b/app/components/NavBar/NavBar.module.css
@@ -125,6 +125,7 @@
     justify-content: space-between;
     width: 500px;
     list-style: none;
+    margin-top: 20px;
     margin-right: 150px;
   }
 
